--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,6 +43,10 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@main
 
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v1
@@ -78,6 +82,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           provenance: false # see https://github.com/n8n-io/n8n/issues/5394
+          platforms: linux/amd64,linux/aarch64
 
 
       # Sign the resulting Docker image digest except on PRs.
